fix: flex wrap for photography inner

--- a/wp-content/themes/mebli/assets/scss/_gallery.scss
+++ b/wp-content/themes/mebli/assets/scss/_gallery.scss
@@ -27,6 +27,7 @@
   .photography-inner {
     display:         flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     position:        relative;
   }
   .photography-list {
